# Roneira-AI-HIFI

./: .env  .env.example  .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  IDEAS.md  README.md  React.js Based Prediction tool  Stock_Market_tool.ipynb  docker-compose.prod.yml  docker-compose.yml  enhanced_requirements.txt  eslint.config.mjs  next.config.ts  package-lock.json  package.json  task.md  tsconfig.json  tsconfig.tsbuildinfo  tsconfig.typecheck.json  tsconfig.typecheck.tsbuildinfo  vercel.json  vitest.config.ts  walkthrough.md
.husky/: pre-commit
backend/: .env.example  .eslintrc.json  .gitignore  DockerFile  Dockerfile  check_health.js  check_health.ts  diagnose_prediction.js  diagnose_prediction.ts  jest.config.js  package-lock.json  package.json  sanity_check.ts  server.js  tsconfig.json  verify_portfolio.ts
deployment/: quick-deploy.sh  railway-deploy.md
docs/: api-endpoints.md
frontend/: .env.example  .eslintrc.cjs  .gitignore  Dockerfile  frontend_debug.txt  index.html  package-lock.json  package.json  package.md  playwright.config.ts  postcss.config.cjs  (+5 more)
ml-service/: .env  .env.example  .flake8  DockerFile  Dockerfile  Procfile  app.py  build.sh  enhanced_app.py  enhanced_requirements.txt  main.py  pdm_strategy_engine.py  pyproject.toml  pytest_log.txt  railway.json  requirements.txt  setup.py  start.sh  test_contract_validation.py  test_enhanced_app.py  test_ml_service.py
ml-service/src/: __init__.py  main.py
ml-service/src/models/: __init__.py  request_models.py
ml-service/src/services/: __init__.py
(+220 files in other folders)
